# KidESpell

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
data/: 10000_esp.txt
kidespell/: __init__.py  info.py  kidespell.py
kidespell/resources/: bi_esp.txt  rules_esp.txt
