[metadata]
name = KidESpell
version = 0.0.1
author = Matías Altamirano
author_email = author@example.com
description = python Spanish spell checking oriented to child, based on KidSpell
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maltamirano/KidESpell
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = kidespell
packages = find:
python_requires = >=3.6

[options.packages.find]
where = kidespell